--- a/NeosIT.Exchange.GenericExchangeTransportAgent.Tests/App.config
+++ b/NeosIT.Exchange.GenericExchangeTransportAgent.Tests/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
@@ -6,18 +6,18 @@
   <log4net>
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] -%message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] -%message%newline"/>
       </layout>
     </appender>
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] -%message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] -%message%newline"/>
       </layout>
     </appender>
     <root>
-      <level value="ALL" />
-      <appender-ref ref="DebugAppender" />
-      <appender-ref ref="ConsoleAppender" />
+      <level value="ALL"/>
+      <appender-ref ref="DebugAppender"/>
+      <appender-ref ref="ConsoleAppender"/>
     </root>
   </log4net>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
