--- a/NeosIT.Exchange.GenericExchangeTransportAgent/App.config
+++ b/NeosIT.Exchange.GenericExchangeTransportAgent/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
@@ -6,29 +6,29 @@
   <log4net>
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] -%message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] -%message%newline"/>
       </layout>
     </appender>
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] -%message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] -%message%newline"/>
       </layout>
     </appender>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file type="log4net.Util.PatternString" value="%env{APPDATA}\NeosIT\GenericExchangeTransportAgent\Logs\" />
-      <appendToFile value="true" />
-      <rollingStyle value="Date" />
-      <datePattern value="yyyyMMdd'.log'" />
-      <staticLogFileName value="false" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <file type="log4net.Util.PatternString" value="%env{APPDATA}\NeosIT\GenericExchangeTransportAgent\Logs\"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Date"/>
+      <datePattern value="yyyyMMdd'.log'"/>
+      <staticLogFileName value="false"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] -%message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] -%message%newline"/>
       </layout>
     </appender>
     <root>
-      <level value="ALL" />
-      <appender-ref ref="DebugAppender" />
-      <appender-ref ref="RollingFileAppender" />
+      <level value="ALL"/>
+      <appender-ref ref="DebugAppender"/>
+      <appender-ref ref="RollingFileAppender"/>
     </root>
   </log4net>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
